# EmotionLens_AI

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: AIs.py  emotionlens_ai.py  fed2013.py  fer2013.py
tests/: test_f.py  test_fed2013.py  test_fer2013.py
